Service Interface Enhancement and first draft implementation of service model
