# CurrencyExchangeSolution/CurrencyExchange.Model/IExchangeSummary.cs
@@ -1,0 +1,10 @@
+﻿namespace CurrencyExchange.Model
+{
+    public interface IExchangeSummary
+    {
+        IMoney From { get; }
+        IMoney? To { get; }
+        decimal? RateApplied { get; }
+        string Notes { get; }
+    }
+}
